@@ -81,9 +81,7 @@ wartet auf das "MIDI Clock Start"-Signal einer externen Quelle,
 die an QMidiArp's MIDI-Eingang angeschlossen wurde. Sobald dieses
 Signal eintrifft, wird die Sequenzerzeugung mit der MIDI-Taktvorgabe der
 externen Quelle gestartet.
-Die Auflösung des eingehenden MIDI-Zeittaktes kann im Dialog
-.B Ansicht-->Einstellungen->"Kadenz der eingehenden MIDI Clock"
-gewählt werden. Der Sequenzer/Arpeggiator hält an, sobald ein 
+Der Sequenzer/Arpeggiator hält an, sobald ein 
 "MIDI Clock Stop"-Signal empfangen wird. Während des 
 "MIDI-Clock-Betriebs" sind die QMidiArp-eigenen Start/Stop-Funktionen 
 sowie das Hinzufügen oder Laden weiterer Module gesperrt. Sie werden 
@@ -411,13 +409,7 @@ verarbeitet werden (
 .B unpassende
 Signale). Hier wird auch bestimmt, ob empfangene MIDI Steuersignale 
 (Control events) benutzt werden, um die Module zu steuern (siehe 
-B.MIDI-Steuerung). 
-Die
-.B Einstellungen
-erlauben auch die Bestimmung der Auflösung der empfangenen 
-.B MIDI-Clock
-Signale. Dieser Wert steht zu Beginn auf 96 ticks per beat (tpb). Durch
-ankreuzen des Kästchens
+B.MIDI-Steuerung). Durch Ankreuzen des Kästchens
 .B Kompakte Darstellung der Module
 werden alle folgenden erzeugten Module in einer Platzsparenden Art 
 dargestellt, um eine bessere Parallel-Darstellung auf dem Schreibtisch
